# apply_bot

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
apply_bot/example/: machinereadable.json
apply_bot/utils/: parse.py
